sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:25: error: 'while' expected but '}' found.
	}	while(swapped && swapped2)
        ^AlgCocktailSort3:25: error: ';' expected but 'while' found.
	}	while(swapped && swapped2)
                ^AlgCocktailSort3:28: error: Unmatched closing brace '}' ignored here
}
^